--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,8 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  flutter_localizations:
+    sdk: flutter
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
@@ -37,6 +39,7 @@ dependencies:
   flutter_svg: ^2.2.1
   flutter_native_splash: ^2.4.7
   go_router: ^16.3.0
+  intl: ^0.20.2
 
 dev_dependencies:
   flutter_test:
@@ -59,6 +62,9 @@ flutter:
   # included with your application, so that you can use the icons in
   # the material Icons class.
   uses-material-design: true
+
+  # Enable generation of localization files
+  generate: true
 
   # To add assets to your application, add an assets section, like this:
   assets:
