--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   flutter_native_splash: ^2.4.7
   go_router: ^16.3.0
   intl: ^0.20.2
+  flutter_riverpod: ^3.0.3
 
 dev_dependencies:
   flutter_test:
