--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,8 @@ dependencies:
   go_router: ^16.3.0
   intl: ^0.20.2
   flutter_riverpod: ^3.0.3
+  dio: ^5.9.0
+  riverpod_annotation: ^3.0.3
 
 dev_dependencies:
   flutter_test:
@@ -52,6 +54,10 @@ dev_dependencies:
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
   flutter_lints: ^5.0.0
+  riverpod_generator: ^3.0.3
+  build_runner: ^2.7.1
+  riverpod_lint: ^3.0.3
+  custom_lint: ^0.8.0
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
@@ -74,6 +80,13 @@ flutter:
     - assets/svg/pokeball2.svg
     - assets/png/onboarding.png
     - assets/png/onboarding2.png
+    - assets/svg/heart.svg
+    - assets/svg/globe.svg
+    - assets/svg/home.svg
+    - assets/svg/user.svg
+    - assets/svg/magikarp.svg
+    - assets/png/magikarp.png
+
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/to/resolution-aware-images
 
