feat: Refactor HomeScreen to use FutureBuilder for API data fetching
- Changed HomeScreen to PokedexScreen and implemented FutureBuilder to fetch Pokémon data from the API.
- Added loading and error handling states in the FutureBuilder.
- Updated PokedexWidget to accept data as a parameter instead of fetching it directly.

chore: Remove unused font family references in OnboardingScreen

- Removed font family references from text styles in OnboardingScreen.

feat: Enhance PokedexWidget with search functionality and filter modal

- Added a search bar and filter preferences modal to PokedexWidget.
- Implemented a new PokemonListTile widget to display Pokémon details.
- Integrated favorites functionality using a new FavoritesProvider.

feat: Create ProfileScreen and RegionesScreen

- Added ProfileScreen and RegionesScreen with basic layout and navigation.

chore: Clean up Dio provider error handling

- Removed unused error handling function from Dio provider.

feat: Implement FavoritesProvider for managing favorite Pokémon

- Created FavoritesNotifier to handle adding, removing, and checking favorite Pokémon.
- Added providers for accessing favorites count and list.

style: Update CustomBottomNavigation for better route handling

- Refactored CustomBottomNavigation to use Riverpod for route management.
- Improved bottom navigation bar styling and functionality.

feat: Add custom default button widget

- Created CustomDefaultButton for consistent button styling across the app.

fix: Update error widget styles

- Removed font family references from PokedexErrorWidget.

feat: Implement filter preferences modal for Pokémon types

- Added FilterPreferencesModal to allow users to filter Pokémon by type.

feat: Create Pokémon search bar widget

- Added PokémonSearchBar widget for searching Pokémon by name.

--- a/.gitignore
+++ b/.gitignore
@@ -159,6 +159,8 @@ test/.test_coverage.dart
 # Logs
 logs/
 *.log
+# Freezed files
+**/*.freezed.dart
 
 # Claude AI (optional - uncomment if you don't want to share)
 # .claude/
