--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -48,6 +48,7 @@ dependencies:
   json_annotation: ^4.9.0
   flutter_slidable: ^3.1.1
   flutter_launcher_icons: ^0.14.4
+  mocktail: ^1.0.4
 
 dev_dependencies:
   flutter_test:
